<resources>
    <string name="app_name">Calc pucpr</string>
    <string name="operator_ac">AC</string>
    <string name="more_and_minus">+/-</string>
    <string name="operator_percent">%</string>
    <string name="operator_divider">/</string>
    <string name="operator_multiply">X</string>
    <string name="operator_minus">-</string>
    <string name="operator_add">+</string>
    <string name="operator_equals">=</string>
    <string name="number_one">1</string>
    <string name="number_seven">7</string>
    <string name="number_eight">8</string>
    <string name="number_nine">9</string>
    <string name="number_four">4</string>
    <string name="number_five">5</string>
    <string name="number_six">6</string>
    <string name="number_two">2</string>
    <string name="number_tree">3</string>
    <string name="number_zero">0</string>
    <string name="number_point">,</string>
    <string name="id_admob_init_app_xml">id_anuncio_aqui</string>
    <string name="id_admob_init_app_test_xml">ca-app-pub-3940256099942544/3419835294</string>
    <string name="id_admob_init_app_manifest">ca-app-pub-2552033802090031~4494631829</string>

</resources>